src/objects/c2g__AllocationSplitTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationsplittemplate</customHelpPage>
    <description>Stores the split percentage information for the template.</description>
    <fields>
        <fullName>c2g__AllocationTemplate__c</fullName>
        <label>Allocation Template</label>
        <referenceTo>c2g__AllocationTemplate__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Allocation Split Templates</relationshipLabel>
        <relationshipName>AllocationSplitTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PercentageSplit__c</fullName>
        <label>Percentage Split (%)</label>
        <precision>7</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Allocation Split Template</label>
    <nameField>
        <displayFormat>AST{000000}</displayFormat>
        <label>Allocation Split Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Split Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>